--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <title>Hands-down</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Landing page</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
